--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img src="./assets/images/birthday-invite.png" alt="Birthday cake" height="200"/>
     </div>
     <hr>
-    <a href="./public/contact.html">About Me</a>  
+    <a href="./public/about.html">About Me</a>  
     <a href="./public/contact.html">Contact Me</a>
   </body>
 </html>
